college as foreign key

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,3 @@
-DB_URI = mongodb+srv://surabhimahale12:Test123@cluster0.t50umfn.mongodb.net/?retryWrites=true&w=majority
+DB_URI = mongodb+srv://surabhimahale12:300221@cluster0.t50umfn.mongodb.net/?retryWrites=true&w=majority
 PORT = 3000
 JWT_TOKEN=09iAKNJKD_knlads%&^*
